@@ -15,9 +15,9 @@ override_dh_auto_test:
 	# Disable auto tests at build time
 	:
 
-override_dh_fixperms:
+override_dh_fixperms-arch:
 	chmod -x debian/plasma-workspace/etc/xdg/autostart/klipper.desktop
-	dh_fixperms
+	dh_fixperms -a
 
-override_dh_gencontrol: libpkgs_gen_strict_local_shlibs
-	dh_gencontrol
+override_dh_gencontrol-arch: libpkgs_gen_strict_local_shlibs
+	dh_gencontrol -a
